US-7.5: Fix z-index on navigation drawer (#77)

--- a/digital-workplace-webapps/src/main/webapp/css/main.less
+++ b/digital-workplace-webapps/src/main/webapp/css/main.less
@@ -603,6 +603,9 @@
         .VuetifyApp .v-list-item {
           padding: 0px;
         }
+        .VuetifyApp .v-navigation-drawer--temporary {
+          z-index: 1050;
+        }
       }
     /*---------- Topbar Edit button CSS ----------------*/
     #UIDWToolbarContainer.UIToolbarContainerDark .uiDropdownWithIcon > a {
